--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ETCH A SKETCH</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header></header>
+    <section id="container"></section>
     <script src="script.js"></script>
+    <footer></footer>
   </body>
 </html>
