feat: create grid inside container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-    <section id="container"></section>
+    <div id="display"></div>
     <script src="script.js"></script>
     <footer></footer>
   </body>
