feat: change color of squares to black on mouseenter

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-    <div id="display"></div>
+    <section id="display"></section>
     <script src="script.js"></script>
     <footer></footer>
   </body>
