feat: put code to create grid inside a function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header></header>
+    <button id="grid-size">Grid size</button>
     <section id="display"></section>
     <script src="script.js"></script>
     <footer></footer>
