--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header></header>
+    <label for="favcolor">Select a color:</label>
+    <input type="color" id="favcolor" value="#000000" />
     <button id="grid-size">Grid size</button>
+    </button>
     <section id="display"></section>
     <script src="script.js"></script>
     <footer></footer>
