--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="icon" type="image/x-icon" href="/etch-a-sketch.png" />
   </head>
   <body>
-    <header></header>
+    <header>ETCH A SKETCH</header><main>
     <label for="favcolor">Select a color:</label>
     <input type="color" id="favcolor" value="#000000" />
+<button id="randomize">Disco</button>
     <button id="grid-size">Grid size</button>
     </button>
     <section id="display"></section>
+</main>
     <script src="script.js"></script>
     <footer></footer>
   </body>
